# abrw-min

./: .gitignore  Cargo.toml  PKGBUILD  README.md  abrw-min-1.0-1-x86_64.pkg.tar.zst  abrw-min-1.1-1-x86_64.pkg.tar.zst  abrw-min-debug-1.0-1-x86_64.pkg.tar.zst  abrw-min-debug-1.1-1-x86_64.pkg.tar.zst
pkg/abrw-min/: .BUILDINFO  .MTREE  .PKGINFO
pkg/abrw-min-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/abrw-min/usr/share/applications/: abrw-min.desktop
src/: abrw-min.desktop  ads.rs  connections.rs  main.rs  settings.rs  styles.rs  tabs.rs  webview.rs
