[package]
name = "abrw-min"
version = "0.1.0"
edition = "2021"

[dependencies]
webkit2gtk-sys = { version = "2.0.1", features = ["v2_16", "v2_24"] }
serde = { version = "1.0.210", features = ["derive"] }
gtk = "0.18.1"
serde_json = "1.0.128"
url = "2.5.2"
webkit2gtk = { version = "2.0.1", features = ["v2_16", "v2_24"] }
adblock = "0.9.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
async-std = "1.13.0"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
dirs = "5.0.1"
lazy_static = "1.5.0"
