[package]
name = "abrw-min"
version = "0.1.0"
edition = "2021"

[dependencies]
webkit2gtk-sys = { version = "2.0.1", features = ["v2_16", "v2_24"] }
serde = { version = "1.0.210", features = ["derive"] }
gtk = "0.18.1"
serde_json = "1.0.128"
url = "2.5.2"
webkit2gtk = { version = "2.0.1", features = ["v2_16", "v2_24"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
tokio = { version = "1.40.0", features = ["full"] }
dirs = "5.0.1"
